--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,10 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.11"
-
+    
+jobs:
+  pre_install:
+    - pip install mkdocs-material
+    
 mkdocs:
   configuration: mkdocs.yml
